add flex layout for book cards

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           <input type="text" placeholder="Name of Book" required autofocus>
           <input type="text" placeholder="Author" required>
           <input type="number" placeholder="Number of Pages" required>
-          <input type="number" placeholder="Read Pages" required>
-          <label for="read">Have You Read It?</label>
+          <input type="number" placeholder="# of Pages Read" required>
+          <label for="read">Would you recommend it?</label>
           <input type="checkbox" id="read">
         </div>
         <div class="bottom-modal">
@@ -35,6 +35,32 @@
           <button type="submit">Add to Library</button>
         </div>
       </form>
+    </div>
+    <div class="library">
+      <div class="book">
+        <p>Book Title: </p>
+        <p>Author: </p>
+        <p>Pages Read: </p>
+        <p class="recommended">Recommended: </p>
+      </div>
+      <div class="book">
+        <p>Book Title: </p>
+        <p>Author: </p>
+        <p>Pages Read: </p>
+        <p class="recommended">Recommended: </p>
+      </div>
+      <div class="book">
+        <p>Book Title: </p>
+        <p>Author: </p>
+        <p>Pages Read: </p>
+        <p class="recommended">Recommended: </p>
+      </div>
+      <div class="book">
+        <p>Book Title: </p>
+        <p>Author: </p>
+        <p>Pages Read: </p>
+        <p class="recommended">Recommended: </p>
+      </div>
     </div>
     <div class="add-book">+</div>
   </main>
