edit new book cards

--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
         <div class="inputs">
           <input type="text" placeholder="Name of Book" required autofocus>
           <input type="text" placeholder="Author" required>
-          <input type="number" placeholder="Number of Pages" required>
           <input type="number" placeholder="# of Pages Read" required>
-          <label for="read">Would you recommend it?</label>
+          <label for="read">Have You Read it?</label>
           <input type="checkbox" id="read">
         </div>
         <div class="bottom-modal">
